# miniAero

./: README.md
kokkos/: CMakeLists.txt  Cell.h  CopyGhost.C  ElementTopo.C  Extrapolate_BC.h  Faces.h  Flux.h  GasModel.h  GreenGauss.h  Initial_Conditions.h  LICENSE  Main.C  Main.h  Makefile  Makefile.mpi  MathTools.h  MemoryUsage.C  MemoryUsage.h  MeshProcessor.h  Options.h  Parallel3DMesh.h  README  Roe_Flux.h  StencilLimiter.h  TimeSolverExplicitRK4.h  VanAlbadaLimiter.h  VenkatLimiter.h  do-cmake-miniaero-bgq-gcc  do-cmake-miniaero-chama  do-cmake-miniaero-curie-mpi-cuda  do-cmake-miniaero-curie-mpi-opt  do-cmake-miniaero-gcc-cuda  do-cmake-miniaero-gcc-mpi-dbg  do-cmake-miniaero-gcc-nompi-dbg  do-cmake-miniaero-gcc-nompi-opt  do-cmake-miniaero-icc-mpi-opt  do-cmake-miniaero-icc-openmpi-opt  do-cmake-miniaero-mpi-dbg  do-cmake-miniaero-mpi-opt  do-cmake-miniaero-mpi-opt-hwloc
kokkos/include/: Cells.h  CopyGhost.h  Extrapolate_BC.h  Face.h  Faces.h  Flux.h  GasModel.h  GreenGauss.h  Inflow_BC.h  Main.h  MathToolsDevice.h  MeshData.h  NoSlip_BC.h  Options.h  Parallel3DMesh.h  Roe_Flux.h  StencilLimiter.h  Tangent_BC.h  TimeSolverExplicitRK4.h  VanAlbadaLimiter.h  VenkatLimiter.h  ViewTypes.h  Viscous_Flux.h  YAML_Default.h  YAML_Doc.h
kokkos/kokkos/: kokkos_version.txt
kokkos/make/: do-cmake-miniaero-bgq-gcc  do-cmake-miniaero-chama  do-cmake-miniaero-curie-mpi-cuda  do-cmake-miniaero-curie-mpi-opt  do-cmake-miniaero-gcc-cuda  do-cmake-miniaero-gcc-mpi-dbg  do-cmake-miniaero-gcc-nompi-dbg  do-cmake-miniaero-icc-mpi-opt  do-cmake-miniaero-icc-openmpi-opt  do-cmake-miniaero-mpi-dbg  do-cmake-miniaero-mpi-opt
kokkos/src/: CMakeLists.txt  Cell.C  Cells.h  CopyGhost.h  ElementTopo.h  ElementTopoHexa8.C  ElementTopoHexa8.h  Face.C  GreenGauss.h  Inflow_BC.h  Main.C  Main.h  MathToolsDevice.h  MeshProcessor.C  NoSlip_BC.h  Parallel3DMesh.C  Tangent_BC.h  ViewTypes.h  Viscous_Flux.h  YAML_Doc.C  YAML_Element.C  test_cuda.cu
kokkos/tests/: README  run_tests.sh
kokkos/tests/3D_Sod_Parallel/: 3d_sod_parallel_test.sh  generate_gold.sh  miniaero.inp  results.0.gold  results.1.gold  results.2.gold  results.3.gold
kokkos/tests/3D_Sod_Serial/: 3d_sod_serial_test.sh  miniaero.inp  results.gold
kokkos/tests/FlatPlate_Parallel/: flatplate_parallel_test.sh  generate_gold.sh  miniaero.inp  results.0.gold  results.1.gold  results.2.gold  results.3.gold  results.4.gold  results.5.gold  results.6.gold  results.7.gold
kokkos/tests/FlatPlate_Serial/: flatplate_serial_test.sh  miniaero.inp  results.gold
kokkos/tests/Ramp_Parallel/: generate_gold.sh  miniaero.inp  ramp_parallel_test.sh  results.0.gold  results.1.gold  results.10.gold  results.11.gold  results.12.gold  results.13.gold  results.14.gold  results.15.gold  results.2.gold  results.3.gold  results.4.gold  results.5.gold  results.6.gold  results.7.gold  results.8.gold  results.9.gold
kokkos/tests/Ramp_Serial/: miniaero.inp  ramp_serial_test.sh  results.gold
kokkos/tests/tools/: numeric_text_diff
